added home app and templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,8 @@
         <header class="container-fluid fixed-top"></header>
         {% if messages %}
             <div class="message-container"></div>
-        {% endblock %}
-        
+        {% endif %}
+
         {% block page_header %}
         {% endblock %}
     
